--- a/node/src/views/planner.ejs
+++ b/node/src/views/planner.ejs
@@ -50,12 +50,22 @@
             </div>
             <div id="center">
                 <div id="buttons">
-                    <button id="museums" type="button" class="input_style_sm filter">Museum</button>
-                    <button id="foods" type="button" class="input_style_sm filter">Food</button>
-                    <button id="religion" type="button" class="input_style_sm filter">Church</button>
-                    <button id="natural" type="button" class="input_style_sm filter">Nature</button>
-                    <button id="architecture" type="button" class="input_style_sm filter">Architecture</button>
-                    <button id="accomodations" type="button" class="input_style_sm filter">Hotel</button>
+                    <button type="button"  class="input_style_sm tag" id="architecture" style="margin-top: 0px;"><i class="fa-solid fa-archway"></i>
+                    </button>
+                    <button type="button"  class="input_style_sm tag" id="museums" style="margin-top: 0px;"><i class="fa-solid fa-book-open"></i>
+                    </button>
+
+                    <button type="button"  class="input_style_sm tag" id="foods" style="margin-top: 0px;"><i class="fa-solid fa-utensils"></i>
+                    </button><br>
+
+                    <button type="button"  class="input_style_sm tag" id="accomodations" style="margin-top: 0px;"><i class="fa-solid fa-bed"></i>
+                    </button>
+                
+                    <button type="button"  class="input_style_sm tag" id="natural"><i class="fa-solid fa-tree"></i>
+                    </button>
+                
+                    <button type="button" class="input_style_sm tag" id="religion"><i class="fa-solid fa-hands-praying"></i>
+                    </button>
                 </div>
                 <div id="info">
                 </div>
