--- a/nginx/static/styles/style_form.css
+++ b/nginx/static/styles/style_form.css
@@ -1,8 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600;700;800&display=swap');
+
+*{
+  font-family : 'Poppins', sans-serif
+}
+
+html, body{
+  width: 100%;
+  height: 100%;
+}
+
 .content {
   position: relative;
   background-color: black;
-  height: 30vh;
-  min-height: 30rem;
+  height: 56vh;
+  min-height: 34rem;
   width: 100%;
   overflow: hidden;
 }
@@ -58,7 +69,7 @@
 
 .input_style{
   width: 100%;
-  max-width: 200px;
+  max-width: 250px;
   display: inline-block;
   font-size: 1em;
   background: #fff;
@@ -69,11 +80,10 @@
   font-weight: 500;
   margin-top: 10px;
   color: #111;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
   transition: 0.2s;
   text-align: center;
   border-radius: 5px;
-  opacity: 100;
 }
 .input_style_small{
   width: 100%;
@@ -94,11 +104,9 @@
   opacity: 100;
 }
 .input_style:hover{
-  letter-spacing: 6px;
+  letter-spacing: 4px;
 }
-.input_style_sm:hover{
-  letter-spacing: 6px;
-}
+
 .button:hover{
   cursor:pointer;
 }
@@ -143,7 +151,11 @@
   color:#d63384;
 }
 
-.tag_color_historical{
+.tag_color_foods{
+  color:#d9534f;
+}
+
+.tag_color_hotel{
   color:#fd7e14;
 }
 
@@ -172,7 +184,7 @@
   min-width: 400px;
   max-width: 700px;
   border-radius: 10px;
-  background-color: rgba(150, 150, 160, 10); 
+  background-color: #cad2d3;
 }
 
 
@@ -189,8 +201,8 @@
 
 @media screen and (max-width: 1200px) {
   .content {
-    height: 100vh;
-    min-height: 50rem;
+    height: 90vh;
+    min-height: 57rem;
   }
 }
 
