--- a/nginx/static/styles/style.css
+++ b/nginx/static/styles/style.css
@@ -29,8 +29,8 @@ html, body{
 #center {
     width: 100%;
     float: left;
-    overflow:auto;
     position: relative;
+    padding-bottom:20px;
 }
 
 #right {
@@ -54,6 +54,7 @@ html, body{
 }
 
 #buttons{
+    margin-top: 17px;
     text-align: center;
     height: 11vh;
 }
@@ -66,6 +67,15 @@ html, body{
     margin: 3px;
     font-size: 2vh;
     overflow: hidden;
+}
+
+#searchBar{
+    position: relative;
+}
+#search{
+    background-color: transparent;
+    border-color: transparent;
+    transform: translateX(-100%);
 }
 
 #days{
@@ -169,43 +179,6 @@ html, body{
     float:right;
 }
 
-#museums{
-    box-sizing: border-box;
-    border-top-width: 5px;
-    border-top-color: rgb(0, 168, 197);
-    border-top-style:solid;
-}
-#foods{
-    box-sizing: border-box;
-    border-top-width: 5px;
-    border-top-color: rgb(158, 0, 34);
-    border-top-style:solid;
-}
-#religion{
-    box-sizing: border-box;
-    border-top-width: 5px;
-    border-top-color: rgb(214, 180, 29);
-    border-top-style:solid;
-}
-#natural{
-    box-sizing: border-box;
-    border-top-width: 5px;
-    border-top-color: rgb(11, 116, 28);
-    border-top-style:solid;
-}
-#architecture{
-    box-sizing: border-box;
-    border-top-width: 5px;
-    border-top-color: rgb(123, 14, 138);
-    border-top-style:solid;
-}
-#accomodations{
-    box-sizing: border-box;
-    border-top-width: 5px;
-    border-top-color: rgb(20, 18, 100);
-    border-top-style:solid;
-}
-
 .input_style_sm{
     font-size: 1em;
     background: rgb(250, 250, 250);
@@ -225,9 +198,6 @@ html, body{
     border-radius:10px;
     margin: 3px;
     padding: 8px;
-    box-sizing: border-box;
-    border-top-width: 5px;
-    border-top-style:solid;
     background-color: #f6f6f4;
     box-shadow: 0 0 5px rgba(0,0,0,0.5);
     color:#6b6b6b;
@@ -285,7 +255,7 @@ html, body{
 }
 
 .tag_color_foods{
-  color:#d9534f;
+  color:#33d6c9;
 }
 
 .tag_color_accomodations{
@@ -293,7 +263,7 @@ html, body{
 }
 
 .tag_color_natural{
-  color:#20c997;
+  color:#20c953;
 }
 
 .tag_color_religion{
@@ -323,6 +293,22 @@ html, body{
     position:absolute;
     transform: translate(-49%, -50%);
     font-size: 100%;
+}
+
+.removeDay{
+    width: 1%;
+    aspect-ratio: 1/1;
+    border-radius: 15px;
+    float: right;
+    background-color: rgb(150, 150, 150);
+    opacity: 0.8;
+    overflow: hidden;
+}
+.removeDay>i{
+    position:absolute;
+    transform: translate(0, -50%);
+    font-size: 100%;
+    right: 8%
 }
 
 .w-icon{
@@ -361,10 +347,10 @@ html, body{
         height: 94%;
         overflow: hidden;
     }
-    .info{ height:82vh;}
+    .info{ height:78vh;}
     #add{
         position: absolute;
-        bottom: 16px;
+        bottom: 32px;
         right:14px;
     }
     .poi>button{
@@ -399,5 +385,5 @@ html, body{
         background-repeat: no-repeat;
         background-position:center;
     }
-    .info{ height:35.5vh;}
+    .info{ height:32vh;}
 }
