--- a/node/src/views/planner.ejs
+++ b/node/src/views/planner.ejs
@@ -81,15 +81,18 @@
                         <h2>Save your Itinerary</h2>
                       </div>
                       <div class="modal-body">
-                        <div class = "text-input">
-                            <input id = "popup-title" class="title" type="text" placeholder="Title of the itinerary" >
-                           
+
+                        <form id="send_form" action="" class="needs-validation" novalidate>
+
+                        <div class="text-input" >
+                            <input class="form-control input_style_sm" type="text" id="popup-title" name="title" placeholder="Title" style="max-width:20%;"  required  />
+                            <div class="invalid-feedback" id="popup-title_f">Type a title.</div>
                         </div>
-                
-                        <div class ="btn">
-                            <button id="dbSave" class="store-on-db-btn"  > Store on Trip Planner Database</button>
-                           
+
+                        <div class ="btn" id="pop_btn"><button id="dbSave" class="store-on-db-btn"> Store on Trip Planner Database</button><div class="spinner-border text-primary"></div><h1>ok</h1>    
                         </div>
+                        
+                    </form>
                 
                       </div>
                       <div class="modal-footer">
