--- a/node/src/views/planner.ejs
+++ b/node/src/views/planner.ejs
@@ -71,9 +71,8 @@
                 </div>
             </div>
             <div id="left" >
-                
+                <div id="commands">
                 <button id="send" type="button" class="input_style_sm"><i class="fa-solid fa-share"></i></button>
-
                 <div  id="modal" class="modal">
                     <div class="modal-content">
                       <div class="modal-header">
@@ -81,30 +80,21 @@
                         <h2>Save your Itinerary</h2>
                       </div>
                       <div class="modal-body">
-
                         <form id="send_form" action="" class="needs-validation" novalidate>
-
                         <div class="text-input" >
                             <input class="form-control input_style_sm" type="text" id="popup-title" name="title" placeholder="Title" style="max-width:20%;"  required  />
                             <div class="invalid-feedback" id="popup-title_f">Type a title.</div>
                         </div>
-
                         <div class ="btn" id="pop_btn"><button id="dbSave" class="store-on-db-btn"> Store on Trip Planner Database</button><div class="spinner-border text-primary"></div><h1>ok</h1>    
                         </div>
-                        
-                    </form>
-                
-                      </div>
-                      <div class="modal-footer">
-                        <h3>Trip Planner</h3>
+                        </form>
                       </div>
                     </div>
                   </div>
-
                 <button id="create" type="button" class="input_style_sm"><i class="fa-solid fa-circle-plus"></i></button>
-                <span id="searchBar"><input id="place" type="text" class="input_style_sm" name="Place"><button type="submit" id="search" onclick=search(this)><i class="fa-solid fa-magnifying-glass"></i></button></span>
-
-                <div id="days"><%if(id){for(const day of itinerary.data){%><div class="day bg-dark"><div class="date d-flex justify-content-between align-items-center">
+                <span id="searchBar"><input id="place" type="text" class="input_style_sm" name="Place"><button type="submit" class="input_style_sm" id="search" onclick=search(this)><i class="fa-solid fa-magnifying-glass"></i></button></span>
+                </div>
+                <div id="days"><%if(id){for(const day of itinerary.data){%><div class="day"><div class="date d-flex justify-content-between align-items-center">
                         <div class="d-flex align-items-center">
                             <input type="date" class="input_style_sm my-1" oninput="getForecast(this)"><div class="text-start" onclick="showNotForecastPopup(this)" onmouseleave="hideNotForecastPopup(this)">
                                 <i class="fa-solid fa-circle-exclamation mx-2"></i>
